--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,6 +25,10 @@
     <string name="add_rs_500">+ 500</string>
     <string name="add_rs_1000">+ 1000</string>
     <string name="add_rs_2000">+ 2000</string>
+    <string name="rs100">100</string>
+    <string name="rs500">500</string>
+    <string name="rs1000">1000</string>
+    <string name="rs2000">2000</string>
     <string name="pay_now">PAY NOW</string>
     <string name="order_id_num">10987654321</string>
     <string name="payment_successful">Payment successful</string>
@@ -51,4 +55,7 @@
     <string name="select_bank">Select Bank</string>
     <string name="select_account">Select Account</string>
     <string name="transaction_history">Transaction History</string>
+    <string name="new_voucher">New Voucher</string>
+    <string name="settings">Settings</string>
+    <string name="please_wait">Please Wait</string>
 </resources>
